Fix navbar overflow on first render width

--- a/src/components/NavBar/styles.module.css
+++ b/src/components/NavBar/styles.module.css
@@ -2,7 +2,7 @@
   position: fixed;
   display: flex;
   justify-content: center;
-  width: 100%;
+  width: 100vw;
   height: 7em;
   transition: 300ms;
 }
